fixed some small things on mobile

--- a/src/styles/blocks/contact-form.scss
+++ b/src/styles/blocks/contact-form.scss
@@ -20,7 +20,7 @@
 
     &--message {
       margin-bottom: 32px;
-      height: 148px;
+      height: 120px;
     }
   }
 
