--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -2,13 +2,22 @@
   display: block;
   height: 24px;
   width: 24px;
-  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 
   &-phone {
-    background-image: url(/src/images/icons/icon-phone-call.png);
+    background-image: url(/src/images/icons/icon-phone-call.svg);
   }
 
   &-burger {
-    background-image: url(/src/images/icons/icon-burger.png);
+    background-image: url(/src/images/icons/icon-burger.svg);
+
+    &:hover {
+    background-image: url(/src/images/icons/icon-burger-hover.svg);
+    }
+  }
+
+  &-close {
+    background-image: url(/src/images/icons/icon-burger-close2.svg);
   }
 }
