--- a/src/styles/utils/resets.scss
+++ b/src/styles/utils/resets.scss
@@ -5,6 +5,7 @@
 
 html {
   font-family: Manrope, sans-serif;
+  scroll-behavior: smooth;
 }
 
 a {
@@ -13,4 +14,14 @@ a {
   padding: 0;
   text-decoration: none;
   color: black;
+}
+
+textarea {
+  padding: 14px 16px;
+  font-family: Manrope, sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 19.6px;
+  letter-spacing: 0.15px;
+  color: #7E7E83;
 }
